--- a/1_FORMULARIOS/1_form_basico/index.html
+++ b/1_FORMULARIOS/1_form_basico/index.html
@@ -7,7 +7,7 @@
     <title>Form Básico</title>
 </head>
 <body>
-    <form action="/usuarios" method="post">
+    <form action="/usuarios" method="POST">
         <div>
             <label for="nome">Nome:</label>
             <input type="text" id="nome" placeholder="Digite seu nome" required>
