--- a/1_FORMULARIOS/3_select/index.html
+++ b/1_FORMULARIOS/3_select/index.html
@@ -26,7 +26,7 @@
                 <label for="opcao2">07 de setembro</label>
             </div>
         </div>
-
+        <div>
         <!-- select -->
         <div>
             <label for="">Selecione sua turma:</label>
@@ -36,7 +36,7 @@
                 <option value="01mb">01MB</option>
             </select>
         </div>
-
+       
         <button>Enviar</button>
     </form>
 </body>
